--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start-api": "cd api && python3 -m flask run --port 5001 --no-debugger"
   },
   "dependencies": {
+    "@kunukn/react-collapse": "^2.2.8",
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
     "isomorphic-unfetch": "^3.0.0",
